Ahora el fondo cambia de color

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="Rojo">#FF0000</color>
+    <color name="Azul">#0e39e0</color>
+    <color name="Verde">#2fca43</color>
+    <color name="Fucsia">#e00d77</color>
+    <color name="Celeste">#4dafea</color>
 </resources>
