--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="Rojo">#FF0000</color>
     <color name="Azul">#0e39e0</color>
     <color name="Verde">#2fca43</color>
-    <color name="Fucsia">#e00d77</color>
+    <color name="Rosa">#e00d77</color>
     <color name="Celeste">#4dafea</color>
 </resources>
